[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name="PyONMS"
version="0.0.7"
requires-python = ">=3.8"
description="A Python library for accessing the OpenNMS REST API."
license={file = "LICENSE.txt"}
dependencies=["requests", "python-dotenv", "xmltodict", "tqdm"]
dynamic = ["readme"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Natural Language :: English",

]

[project.urls]
"Homepage" = "https://github.com/mmahacek/PyONMS"
"Documentation" = "https://mmahacek.github.io/PyONMS/"

[tool.setuptools]
license-files = ["LICENSE.txt"]
packages=["pyonms", "pyonms.dao", "pyonms.models", "pyonms.portal", "pyonms.utils"]
#url="https://github.com/mmahacek/PyONMS"
#author="Mark Mahacek"
#author_email="mmahacek@opennms.com"

[tool.setuptools.dynamic]
readme = {file = "README.md"}
