[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
name="PyONMS"
requires-python = ">=3.8"
description="A Python library for accessing the OpenNMS REST API."
readme = "README.md"
license-files = {paths = ["LICENSE.txt"]}
authors = [{ name = "Mark Mahacek", email = "mmahacek@opennms.com" }]
dependencies=["requests", "python-dotenv", "xmltodict", "tqdm"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Natural Language :: English",
]

[project.urls]
"Homepage" = "https://github.com/mmahacek/PyONMS"
"Documentation" = "https://mmahacek.github.io/PyONMS/"

[tool.hatch.version]
path = "pyonms/__init__.py"
